--- a/Prueba-Tecnica/Prueba-Tecnica.csproj
+++ b/Prueba-Tecnica/Prueba-Tecnica.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+    <Folder Include="Mappings\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
