Estructura base de entidades y dependencias iniciales
Se redefinen las entidades principales en Models con propiedades y relaciones. Se agregan paquetes NuGet para AutoMapper, ClosedXML y EF Core. Se actualiza la configuración con la cadena de conexión SQL Server. Se crean esqueletos de controladores y clases de infraestructura. Se deja vacía la interfaz IProductService. Preparación para lógica de negocio y persistencia.

--- a/Prueba-Tecnica/appsettings.Development.json
+++ b/Prueba-Tecnica/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=spiderman\\LOCALDB#72CA8AFF;Database=InventoryDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
