Implementa autenticación JWT y Swagger en la API
Se agregan paquetes y configuración para JWT y Swagger. Se crea el endpoint de login (`/api/auth/login`) y los DTOs necesarios. Se implementa el servicio de autenticación y su interfaz. Los controladores de recursos ahora requieren autenticación mediante JWT. Se actualiza la documentación Swagger para soportar autenticación Bearer.

--- a/Prueba-Tecnica/appsettings.json
+++ b/Prueba-Tecnica/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "change_this_key_to_a_long_secure_value",
+    "Issuer": "PruebaTecnicaApi",
+    "Audience": "PruebaTecnicaApi",
+    "ExpiresMinutes": 60,
+    "Username": "admin",
+    "Password": "admin123"
+  },
   "AllowedHosts": "*"
 }
