--- a/Prueba-Tecnica/appsettings.Development.json
+++ b/Prueba-Tecnica/appsettings.Development.json
@@ -15,6 +15,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=spiderman\\LOCALDB#72CA8AFF;Database=InventoryDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=InventoryDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
